# Equipilot-AI

./: .dockerignore  .env.example  .gitignore  AUDIT_REPORT.md  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  PERF_BENCHMARK.md  Procfile  README.md  SECURITY.md  SUPPORT.md  TOD0.md  TODO.md  TODO_TOOL_INTEGRATION.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml
.streamlit/: config.toml
archive/: design_system.py  example_execution.py  research_graph.py  sentiment_prompt.py
backend/: __init__.py  app.py  config.py
backend/agents/: __init__.py  market_agent.py  news_agent.py  router_agent.py  sentiment_agent.py  synthesis_agent.py
backend/core/: __init__.py  constants.py  exceptions.py
backend/exceptions/: __init__.py  entity_resolution_exceptions.py  handlers.py  sentiment_exceptions.py  synthesis_exceptions.py
backend/graphs/: __init__.py  graph.py  nodes.py  research_graph.py  state.py
backend/middleware/: __init__.py  production.py
backend/prompts/: __init__.py  research_prompt.py  router_prompts.py  sentiment_prompts.py  synthesis_prompts.py
backend/schemas/: __init__.py  entity_resolution.py  market_data.py  market_data_schema.py  news.py  report.py  research.py  research_report.py  sentiment.py
backend/services/: __init__.py  entity_resolution_service.py  llm_service.py  market_data_service.py  market_service.py  news_service.py  sentiment_service.py
backend/tools/: __init__.py  entity_resolution_tool.py  market_data_tool.py  news_tool.py  sentiment_tool.py  yfinance_tool.py
backend/utils/: __init__.py  helpers.py  logger.py  validators.py
docs/: ARCHITECTURE.md  api.md  deployment.md  github_workflow.md  testing.md  troubleshooting.md
equipilot-ai/: README.md  requirements.txt
equipilot-ai/backend/schemas/: __init__.py  report.py  research.py  sentiment.py
equipilot-ai/backend/services/: __init__.py  news_service.py
equipilot-ai/docs/: DATA_SOURCES.md
frontend/: __init__.py  app.py  healthz.py
frontend/components/: __init__.py  design_system_ui.py  progress_tracker.py  query_form.py  report_display.py  research_form_helpers.py  sidebar.py
tests/: test_dynamic_routing.py  test_e2e_integration.py  test_entity_resolution_service.py  test_entity_resolution_tool.py  test_frontend_components.py  test_langgraph_market_news_integration.py  test_market_data_service.py  test_market_data_tool.py  test_production.py  test_research_response_contract.py  test_sentiment_service.py  test_sentiment_tool.py  test_synthesis_agent.py
