# EquiPilot AI — Project Configuration
# Tool settings for Ruff, Black, pytest, and coverage

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

# =============================================================================
# Ruff — Python linter and formatter
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by Black)
    "N802",  # function name should be lowercase (allows CamelCase in tests)
    "N803",  # argument name should be lowercase
    "N806",  # variable in function should be lowercase
    "N815",  # class attribute should be lowercase
    "N816",  # variable in class scope should not be mixed case
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002", "N802", "N803", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# =============================================================================
# Black — Python code formatter
# =============================================================================
[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# =============================================================================
# pytest — Test runner
# =============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "production: marks tests as production readiness tests",
]

# =============================================================================
# Coverage.py — Code coverage measurement
# =============================================================================
[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

# =============================================================================
# mypy — Static type checking
# =============================================================================
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_any_unimported = false

[[tool.mypy.overrides]]
module = [
    "backend.tests.*",
    "tests.*",
]
ignore_errors = true